[metadata]
name = tianti
author = zilch zhong
classifier =
    Environment :: tianti
    Intended Audience :: System Administrators
    License :: None
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7

[files]
packages =
    tianti
data_files =
    /etc/tianti =
        etc/tianti_dev.ini
        etc/tianti_prd.ini
    /usr/lib/systemd/system =
        etc/tianti.service
    /etc/logrotate.d =
        etc/tianti.logrotate

[bdist_rpm]

[entry_points]
console_scripts =
    tianti = tianti.server:main